--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV='development' nodemon < /dev/null --exec babel-node server/index.js",
     "prod:build": "webpack --config webpack.config.js",
+    "prod:deploy": "NODE_ENV=production pm2 deploy ecosystem.config.js production",
     "prod:serve": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
