--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV='development' nodemon < /dev/null --exec babel-node server/index.js",
+    "dev:scrape": "NODE_ENV='development' SCRAPE='true' nodemon < /dev/null --exec babel-node server/index.js",
     "prod:build": "webpack --config webpack.config.js",
     "prod:setup": "NODE_ENV=production pm2 deploy production setup",
     "prod:deploy": "NODE_ENV=production pm2 deploy ecosystem.config.js production",
