--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV='development' nodemon < /dev/null --exec babel-node server/index.js",
-    "dev:scrape": "NODE_ENV='development' SCRAPE='true' nodemon < /dev/null --exec babel-node server/index.js",
-    "prod:build": "webpack --config webpack.config.js",
-    "prod:setup": "NODE_ENV=production pm2 deploy production setup",
-    "prod:deploy": "NODE_ENV=production pm2 deploy ecosystem.config.js production",
-    "prod:serve": "NODE_ENV=production pm2 startOrRestart ecosystem.config.js"
+    "dev:start": "nodemon",
+    "dev:scrape": "NODE_ENV='development' SCRAPE='true' nodemon < /dev/null --exec babel-node src/index.js",
+    "prod:build": "tsc src"
   },
   "dependencies": {
     "babel-node": "^0.0.1-security",
@@ -28,10 +25,6 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
     "eslint": "^6.8.0",
-    "nodemon": "^2.0.3",
-    "npm-run-all": "^4.1.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "nodemon": "^2.0.3"
   }
 }
