--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "eslint-plugin-react": "^7.19.0",
     "mongoose": "^5.9.15",
     "redis": "^3.0.2",
-    "sleep": "^6.2.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
@@ -25,6 +24,8 @@
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
+    "@types/mongoose": "^5.7.36",
+    "@types/redis": "^2.8.27",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.3"
   }
