--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "ESNext.AsyncIterable"
     ],
     "allowJs": true,
+    "declaration": true,
     "outDir": "build",
     "rootDir": "src",
     "strict": true,
@@ -14,7 +15,6 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false,
     "experimentalDecorators": true
   }
 }
