--- a/package.json
+++ b/package.json
@@ -10,21 +10,14 @@
     "prod:start": "pm2 start ecosystem.config.json --env production"
   },
   "dependencies": {
-    "@types/morgan": "^1.9.1",
-    "babel-node": "^0.0.1-security",
     "bull": "^3.14.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.19.0",
     "mongoose": "^5.9.15",
-    "redis": "^3.0.2",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.4.2"
+    "redis": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
+    "@types/bull": "^3.14.2",
     "@types/mongoose": "^5.7.36",
     "@types/redis": "^2.8.27",
     "eslint": "^6.8.0",
