--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "prod:start": "pm2 start ecosystem.config.json --env production"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^7.4.1",
     "@types/jquery": "^3.5.1",
+    "@types/node": "^14.11.2",
     "@types/puppeteer": "^3.0.2",
     "@types/random-useragent": "^0.3.0",
     "bull": "^3.14.0",
     "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.19.0",
+    "graphql": "^15.3.0",
     "mongoose": "^5.9.15",
     "puppeteer": "^5.3.1",
     "random-useragent": "^0.5.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "type-graphql": "^1.0.0"
   },
   "devDependencies": {
     "@types/bull": "^3.14.2",
