--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "strictPropertyInitialization": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   }
