adding types and cleaning up scraper functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "resolveJsonModule": true,
     "strictPropertyInitialization": false,
     "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
     "experimentalDecorators": true
   }
 }
