--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/redis": "^2.8.27",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.3",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
